# rockchip-3126-buildroot-bsp

./: .gitignore  README.md  build.sh  mkfirmware.sh
app/demo/: CMakeLists.txt
app/demo/rmsl/: CMakeLists.txt  main.c  make.sh  rkdrm_display.c  rkdrm_display.h  rmsl_api.h  rmsl_ctrl.c  rmsl_depth.c  rmsl_tool.c  vpu_decode.c  vpu_decode.h
app/multicamera/: .gitignore  main.cpp  multicamera.cpp  multicamera.desktop  multicamera.h  multicamera.pro
app/qplayer/: qplayer.cpp
app/qsetting/: qtbt.cpp  qtwifi.cpp
app/rkffplay/src/: CMakeLists.txt  buffers.c  buffers.h  ffplay.c  kmssink.c  kmssink.h
app/rkffplay/src/remote_control_test/: ffplay_ipc.c  ffplay_ipc.h
app/rkffplay/src/util/: format.c  format.h  kms.c  pattern.c  pattern.h
buildroot/: .gitignore  Makefile
buildroot/configs/: rockchip_rk3126c_dpf_defconfig  rockchip_rk312x_defconfig
buildroot/package/: Config.in
kernel/: .gitignore  defconfig
ota/: .gitignore  boot.img  create-ota.sh  libcrypto.so.1.1  libssl.so.1.1  model  openssl  ota  rootfs.img
ota/ota-key/: ota-key.sh  ota.key  ota_key.pub  ota_key.x509  x509.genkey
rkbin/: .gitignore  README  RKBOOT.ini
rkbin/RKBOOT/: PX30MINIALL.ini  PX30MINIALL_SLC.ini  PX3SEMINIALL.ini  PX5KERNEL4.4MINIALL.ini  PX5MINIALL.ini  RK1806MINIALL.ini  RK1808MINIALL.ini  RK1808MINIALL_WO_FTL.ini  RK30.ini  RK302A.ini  RK302AMINI.ini  RK302AMINIALL.ini  RK3032MINIALL.ini  RK3036.ini  RK3036MINIALL.ini  RK3036_ECHOMINIALL.ini  RK30B.ini  RK30BMINI.ini  RK30BMINIALL.ini  RK30MINI.ini  RK30MINIALL.ini  RK310B.ini  RK310BMINI.ini  RK310BMINIALL.ini  RK3126.ini  RK3126MINIALL.ini  RK3128.ini  RK3128MINIALL.ini  RK3128XMINIALL.ini  RK3188MINIALL.ini  RK322XATMINIALL.ini  RK322XHMINIALL.ini  RK322XMINIALL.ini  RK3288.ini  RK3288MINIALL.ini  RK3308MINIALL.ini  RK3308MINIALL_UART4.ini  RK3308MINIALL_WO_FTL.ini  RK3326AARCH32MINIALL.ini  RK3326MINIALL.ini  (+25 more)
rkbin/RKTRUST/: PX30TRUST.ini  PX3SETOS.ini  PX5KERNEL4.4TRUST.ini  PX5TRUST.ini  RK1806TRUST.ini  RK1808TRUST.ini  RK3036TOS.ini  RK3126TOS.ini  RK3126TOS_LADDR.ini  RK3128TOS.ini  RK3128XTOS.ini  RK322XHTRUST.ini  RK322XTOS.ini  RK3288TOS.ini  RK3308AARCH32TRUST.ini  RK3308TRUST.ini  RK3326TRUST.ini  RK3328TRUST.ini  RK3368BOXTRUST.ini  RK3368HTRUST.ini  RK3368TRUST.ini  RK3399PROTRUST.ini  RK3399TRUST.ini  RKNPULIONTRUST.ini  RV1109TOS.ini  RV1109TOS_TB.ini  RV1126TOS.ini  RV1126TOS_TB.ini
rkbin/scripts/: checkpatch.sh
u-boot/: make.sh
(+517 files in other folders)
